---------------------------------------------------------------------------------------------------
Version: 1.5.6
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.5.5
Date: 2025-11-30
  Compatibility:
    - Crushing Industry: Stone is removed as a byproduct option, since crushing industry already adds that
---------------------------------------------------------------------------------------------------
Version: 1.5.4
Date: 2025-11-30
  Compatibility:
    - Arcanyx: Add support for voidstone from asteroids
---------------------------------------------------------------------------------------------------
Version: 1.5.3
Date: 2025-07-05
  Bugfixes:
    - Fix cupric asteroids not appearing around Muluna
  Compatibility:
    - Remove Voidcraft patch that is no longer needed
---------------------------------------------------------------------------------------------------
Version: 1.5.2
Date: 2025-07-03
  Bugfixes:
    - Fix cupric asteroid triproduct being disregarded
---------------------------------------------------------------------------------------------------
Version: 1.5.1
Date: 2025-05-26
  Changes:
    - Slightly less crash-prone code
  Compatibility:
    - Add prismite ore to byproduct options if Iridescent Industry is installed (thanks, S6X!)
---------------------------------------------------------------------------------------------------
Version: 1.5.0
Date: 2025-05-19
  Bugfixes:
    - Fix uranium ore result being double for advanced cupric asteroid crushing
  Compatibility:
    - BZ Tin: Add setting to enable/disable byproduct compatibility
    - BZ Titanium: Add byproduct option for advanced metallic/cupric asteroid crushing
    - BZ Lead: Advanced metallic asteroid crushing icon to use BZ Lead ore as the main resource
---------------------------------------------------------------------------------------------------
Version: 1.4.2
Date: 2025-05-11
  Compatibility: