@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.5.6
 Date: ????
-  Changes:
+  Compatibility:
+    - Space Age Hard Mode: Fix load error from attempting to read a setting that's been removed
 ---------------------------------------------------------------------------------------------------
 Version: 1.5.5
 Date: 2025-11-30
